--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,60 @@ button {
 }
 
 .main {
-  margin-top: 140px;
+  margin-top: 285px;
   text-align: center;
+}
+
+.publish {
+  /* container styles if any */
+  
+}
+
+.publish h3 {
+  font-family: "Alegreya", serif;
+  font-size: 40px;
+  line-height: 38px;
+  color: #4c797c;
+}
+
+.publish > p {
+  font-size: 16px;
+  color: #472e2e;
+  line-height: 1.5;
+  margin-bottom: 20px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.publish > form {
+  display: flex;
+}
+
+.publish > form p {
+  color: #05838b;
+  margin-right: 18px;
+}
+
+.promo {
+  display: flex;
+  width: 70%;
+  margin: 100px auto;
+  align-items: center;
+}
+
+.explanatory-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.explanatory-video img {
+  width: 120px;
+  margin-top: 10px;
+}
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
