--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(#FFFFFF, rgb(255, 122, 89));
+    background-image: linear-gradient(#FFFFFF, rgb(250, 187, 171));
 }
 h1 {
   color: rosybrown;
@@ -29,6 +29,7 @@ button {
   font-size: 0;
   height: 45px;
   font-family: sans-serif;
+  background-color: #025157;
 }
 
 .header > * {
@@ -50,6 +51,7 @@ button {
   text-align: center;
   vertical-align: middle;
   color: #025157;
+  overflow: hidden;
 }
 
 .navbar li {
@@ -141,3 +143,114 @@ button {
   left: 0;
   right: 0;
 }
+
+.TextAside{
+  width: 70%;
+  margin-right: 70px;
+}
+
+.TextAside h2 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  line-height: 38px;
+  color: #44065cd8;
+}
+
+.TextAside p{
+  font-size: 19px;
+  color: #472e2e;
+  line-height: 1.5;
+  margin-bottom: 20px;
+  font-family:'Courier New', Courier, monospace;
+  text-align: justify;
+}
+
+.TextAside button {
+  color: white;
+  background-color: #67b54b;
+  padding: 12px 14px 12px 14px;
+  border: 0;
+  border-radius: 5px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.TextAside img {
+  margin: 15px;
+  vertical-align: middle;
+}
+
+.TextAside div {
+  margin-top: 20px;
+}
+
+.comboPinterest{
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
+  margin: 0 0 10px;
+  background-color: #fff; 
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-content: left;
+  width: 50%;
+}
+
+.comboPinterest h4{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 30px;
+  line-height: 39px;
+  color: #6e0483;
+  margin: 15px;
+}
+
+.comboPinterest img{
+  width: 100%;
+}
+
+.comboPinterest p {
+  margin: 20px;
+}
+
+.biografia {
+  display: flex;
+  width: 70%;
+  margin: 100px auto;
+  align-items: center;
+}
+
+.contentPinterest {
+  display: flex;
+  width: 70%;
+  margin: 20px auto;
+  align-items: center;
+  }
+
+.contentPinterest img {
+width: 5%;
+}
+
+.contentPinterest p {
+  font-size: 19px;
+  color: #1e1e1f;
+  line-height: 1;
+  margin: 0 0 0 20px;
+  font-family:'Courier New', Courier, monospace;
+}
+
+
+
+.comboPinterest button {
+  color: white;
+  background-color: #67b54b;
+  padding: 12px 14px 12px 14px;
+  border: 0;
+  border-radius: 5px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
