--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,9 @@ button {
 }
 
 .navbar {
-  width: 70%;
-  height: 100%;
   text-align:center;
   color: #d5ecee;
+  font-weight: 500;
   overflow: hidden;
 }
 
@@ -68,7 +67,6 @@ button {
 }
 
 .actions {
-  width: 15%;
   text-align: right;
   vertical-align: middle;
   font-size: 14px;
