--- a/stylesFeatures.css
+++ b/stylesFeatures.css
@@ -35,7 +35,34 @@
     border-radius: 5px;
   }
 
-  .container {
+  /*.container {
     margin-top: 90px;
     text-align: center;
   }
+
+  .container .g-3{
+    display: flex;
+  }*/
+
+
+
+  .card_mb-31 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+}
+
+.col-12{
+  margin-top: 90px;
+}
+
+.row1-1{
+  text-align: right;
+}
+
+.col-md-6 .row2{
+ padding-left: 25px;
+ padding-top: 10px;
+ vertical-align: middle;
+ justify-content: center;
+}
