--- a/aboutUS.css
+++ b/aboutUS.css
@@ -168,5 +168,57 @@ body {
     left: 0px;
   }
 }
+.flecha {
+  margin: 0 auto;
+  height: 130px;
+  width: 130px;
+  margin-bottom: 35px;
+}
+.flecha .flecha-contenedor {
+  position: relative;
+  height: 150px;
+  width: 150px;
+  margin-bottom: 65px;
+  /* Estamos agregando la regla de descender y subir al punto inicial */
+}
+.flecha .flecha-contenedor .flecha-animada {
+  position: absolute;
+  animation-name: up-and-down, left-right;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  height: 130px;
+  width: 130px;
+}
+.flecha .flecha-contenedor .flecha-animada img {
+  width: 130px;
+  transform: rotate(-90deg);
+}
+@keyframes left-right {
+  from {
+    left: -270px;
+  }
+  to {
+    left: 270px;
+  }
+}
+@keyframes up-and-down {
+  0% {
+    top: 0; /* Aquí inicia la animación */
+  }
+  25% {
+    top: -30px; /* Este es el punto donde alcanza la mitad del límite de los 60px, moviéndose hacia abajo */
+  }
+  50% {
+    top: -60px; /* Este es el punto donde alcanza el límite de los 60px */
+  }
+  75% {
+    top: -30px; /* Este es el punto donde alcanza la mitad del límite de los 60px, moviéndose hacia arriba */
+  }
+  100% {
+    top: 0; /* Aquí termina la animación, ubicando el elemento en el punto de inicio */
+  }
+}
 
 /*# sourceMappingURL=aboutUS.css.map */
