--- a/styles.css
+++ b/styles.css
@@ -342,13 +342,15 @@ width: 5%;
 
   .features .feature-card .feature-imageItem2-1 {
     flex: 1;
-    width: 70%;
     height: 70%;
+    padding-left: 30px;
+    padding-right: 20px;
+    text-align: center;
   }
 
   .features .feature-card .feature-imageItem2-1 figure,
   .features .feature-card .feature-imageItem2-1 img {
-    margin-top: 0;
+    margin: 0;
     height: 100%;
   }
 
